force-app/main/default/objects/Ticket_Order__c/Ticket_Order__c.object-meta.xml
<CustomObject>
    <label>Ticket Order</label>
    <nameField>
        <displayFormat>TO-{0000}</displayFormat>
        <label>Ticket Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ticket Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>