force-app/main/default/objects/Ticket_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ticket Orders</relationshipLabel>
    <relationshipName>Ticket_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>