force-app/main/default/objects/Ticket_Order__c/fields/Order_Fee__c.field-meta.xml
<CustomField>
    <fullName>Order_Fee__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Order Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>