force-app/main/default/objects/Ticket_Order__c/fields/Ticket_Purchaser__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Purchaser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ticket Purchaser</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ticket Orders</relationshipLabel>
    <relationshipName>Ticket_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>