force-app/main/default/objects/Ticket_Order__c/fields/Ticket_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Subtotal__c</fullName>
    <label>Ticket Subtotal</label>
    <summarizedField>Ticket_Order_Item__c.Ticket_Price__c</summarizedField>
    <summaryForeignKey>Ticket_Order_Item__c.Ticket_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>